# PCL_Learning

./: README.md
chapter3/1 reading pcd/source/: CMakeLists.txt  package.xml  pcd_read.cpp
chapter3/2 writing pcd/source/: pcd_write.cpp
chapter3/3 concatenating pcd/source/: CMakeLists.txt  concatenate_clouds.cpp
chapter4/kdtree_search/source/: kdtree_search.cpp
chapter4/octree_change_detection/source/: CMakeLists.txt  octree_change_detection.cpp
chapter4/octree_search/source/: CMakeLists.txt  octree_search.cpp
chapter4/pcl_compression/: CMakeLists.txt  pcl_compression.cpp
chapter4/point_cloud_compression/source/: point_cloud_compression.cpp
chapter5/cloud_viewer/source/: cloud_viewer.cpp
chapter5/pcl_visualizer_demo/source/: CMakeLists.txt  pcl_visualizer_demo.cpp
chapter5/range_image_visualization/source/: CMakeLists.txt  range_image_visualization.cpp
chapter6/2 voxel_grid/source/: CMakeLists.txt  voxel_grid.cpp
chapter6/3 statistical_removal/source/: CMakeLists.txt  statistical_removal.cpp
chapter6/4 project_inliers/source/: CMakeLists.txt  project_inliers.cpp
chapter6/5 extract_indices/source/: CMakeLists.txt  extract_indices.cpp
chapter6/6 remove_outliers/source/: CMakeLists.txt  remove_outliers.cpp
chapter6/7 CropHull/source/: CMakeLists.txt  crophull.cpp
chapter7/1 range_image_creation/source/: CMakeLists.txt  range_image_creation.cpp
chapter7/2 range_image_border_extraction/source/: CMakeLists.txt  range_image_border_extraction.cpp
chapter7/4/: CMakeLists.txt  boardextractor.cpp
