cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(pcl_compression)
set(CMAKE_BUILD_TYPE Debug)
find_package(PCL 1.2 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(${PROJECT_NAME} pcl_compression.cpp)
target_link_libraries(${PROJECT_NAME} ${PCL_LIBRARIES})